# habits_tracker

./: .env.sample  .gitignore  pyproject.toml
conf/: celery.py  settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_is_enjoyable.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
